# AI_agent_PM

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AI_Scrum_Master.docx  CODEBASE_AUDIT_REPORT.md  Dockerfile  Output.md  README.md  SESSION_SUMMARY.md  WBS.xlsx  benchmark_report.md  debug.py  docker-compose.yml  implementation_plan.md  logs.txt  output_temp.txt  oversized_validation_output.json  package-lock.json  payload.json  pipeline_validation_output.json  poetry_setup.md  prompt.md  pyproject.toml  report_20.5.md  requirements.txt  researcher_query_output.json  scratch.py  temp_check_boards.py  temp_check_sprint.py  test_crewai_ollama.py  test_pipeline.py  test_routing.py  test_run.py  test_script.py  test_tasks.py  wbs_output.csv
.claude/: CLAUDE.md  settings.local.json
.codex/: config.toml
data/: ai_planner_output.json  benchmark_local.py  benchmark_report_final.txt  benchmark_report_local.txt  benchmark_report_vscode.txt  clean_requirements.json  config.py  dataset.json  eval_input.json  fetch_real_prs.py  final_evaluation_report.json  final_evaluation_report_v2.json  gemini_evaluator.py  gemini_ground_truth.json  generate_vscode_ground_truth.py  generated_features_output.json  golden_sample.json  ground_truth.json  input.json  llm_evaluated_requirements.json  merge_for_evaluation.py  openproject_issues.json  orchestrate_eval.py  orchestrate_eval_vscode.py  planner_benchmark_cases.json  recover_data.py  run_fast_benchmark.py  run_fast_eval_vscode.py  scrum_sample.txt  test_queries.json  transform_requirements.py  user_story_sample.txt  vscode_agent_issues.json  vscode_agent_requirements.json  vscode_closed_dataset.json  (+3 more)
scripts/: ingest.py  (+18 more)
(+411 files in other folders)
