[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-scrum-master"
version = "0.1.0"
description = "AI Scrum Master Agent for turning stakeholder requests into sprint-ready Jira work items."
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "streamlit",
    "pytest",
    "crewai",
    "langchain",
    "langchain-community",
    "langchain-chroma",
    "langchain-ollama",
    "langchain-text-splitters",
    "chromadb",
    "pyyaml",
    "pydantic",
    "python-dotenv",
    "ollama",
    "pypdf",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
