[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-scrum-master"
version = "0.1.0"
description = "AI Scrum Master Agent for turning stakeholder requests into sprint-ready Jira work items."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<0.116",
    "starlette>=0.40,<0.42",
    "uvicorn",
    "streamlit",
    "pytest",
    "langchain",
    "langchain-community",
    "langchain-qdrant",
    "langchain-ollama",
    "langchain-text-splitters",
    "qdrant-client",
    "motor",
    "pyyaml",
    "pydantic",
    "python-dotenv",
    "ollama",
    "pypdf",
    "typer>=0.12.0",
    "loguru>=0.7.2",
    "PyMuPDF>=1.24.0",
    "python-docx>=1.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
